# order_picking_robot

./: README.md
ai_server/src/ai_server_pkg/ai_server_pkg/: ai_engine.py  ai_server_node.py  udp_server.py
ai_server/src/ros_interfaces/: CMakeLists.txt  package.xml
robot_arm/src/my_robot_description/urdf/: my_robot.urdf
robot_arm/src/robot_arm_controllers/: CMakeLists.txt
robot_arm/src/robot_arm_controllers/include/robot_arm_controllers/arm/: arm_controller.h  pca9685_comm.h
robot_arm/src/robot_arm_controllers/include/robot_arm_controllers/cam/: cam_controller.hpp
robot_arm/src/robot_arm_controllers/include/robot_arm_controllers/net/: net_controller.hpp
robot_arm/src/robot_arm_controllers/src/arm/: arm_controller.cpp  pca9685_comm.cpp
robot_arm/src/robot_arm_controllers/src/cam/: cam_controller.cpp
robot_arm/src/robot_arm_controllers/src/net/: net_controller.cpp
robot_arm/src/robot_arm_controllers/test/: depthmap_test.cpp  send_img_test.cpp
robot_arm/src/robot_arm_core/: CMakeLists.txt  package.xml
robot_arm/src/robot_arm_core/include/: arm_workflow_manager.hpp  domain_types.hpp
robot_arm/src/robot_arm_core/include/controllers/: arm_controller.h  cam_controller.hpp  net_controller.hpp
robot_arm/src/robot_arm_core/src/: arm_workflow_manager.cpp
robot_arm/src/robot_arm_core/src/controllers/: I2CPeripheral.cpp  arm_controller.cpp  cam_controller.cpp  net_controller.cpp  pca9685_comm.cpp
robot_arm/src/robot_arm_ros/: CMakeLists.txt  package.xml
robot_arm/src/robot_arm_ros/include/: i_arm_workflow_proxy.hpp  robot_arm_node.hpp
robot_arm/src/robot_arm_ros/src/: robot_arm_node.cpp
robot_arm/src/ros_interfaces/action/: DispatchManipulationTask.action
